--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,8 +6,9 @@
     <title>{{ page.title }} - {{ site.title }}</title>
       <!-- font link -->
       <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
-      <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/style.css">
+      <!-- <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/style.css"> -->
     <!-- <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}"> -->
+     <link rel="stylesheet" href="/assets/css/style.css">
   </head>
   <body>
     
