--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,14 +6,11 @@
     <title>{{ page.title }} - {{ site.title }}</title>
       <!-- font link -->
       <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
-      <!-- <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/style.css"> -->
-    <!-- <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}"> -->
-     <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="{{ './assets/css/style.css' | relative_url }}">
   </head>
   <body>
     
     {{ content }}
     
-    <script src="{{  '/assets/css/js/script.js' | relative_url }}"></script>
   </body>
 </html>
