--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,8 +6,8 @@
     <title>{{ page.title }} - {{ site.title }}</title>
       <!-- font link -->
       <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
-    <link rel="stylesheet" href="{{ './assets/css/style.css' | relative_url }}">
-  </head>
+      <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
+    </head>
   <body>
     
     {{ content }}
